# vt-eyre

./: README.md  gui.py  pyproject.toml
tests/: testscanner.py
vt-eyre/: __init__.py  cli.py  scanner.py
vt-eyre-server/: server.py
